v2.6.0
Removed BroMakerData.mod.json file.
Fixed issue where audio clips couldn't be played multiple times simultaneously.
Fixed custom hero prefabs being destroyed on level reload

v2.5.0
Added sounds method for SwordHero
Added the 'virtual' tag to 'SwordHero.DeflectProjectiles'
Removed the color tag in the mod name
Fixed some errors inside 'ResourcesController'
Fixed exception when preloading SpecialIcon sprites that are specified as an array.
Fixed black trails when custom bros throw grenades.
Improved error messages.

v2.4.0
Added options for:
    Changing text color in cutscenes.
    Adding animated sprites in cutscenes.
Fixed textures loading with wrong TextureClampMode.
Added check for if bros are too outdated for the current BroMaker version.

v2.3.5
Improved custom bros load time.
Fixed custom bros spawning with incorrect textures on helicopters.

v2.3.4
Fixed custom bros being unable to climb vines in custom levels.
Fixed custom bros not being able to respawn via parachute in certain levels.
Fixed json only custom bros not having certain bug fixes applied to them.

v2.3.3
Fixed bro UI disappearing when changing scenes.
Added option for disabling avatar flashing for custom bros.
Fixed vanilla bros being visible for one frame when spawning as a custom bro.
Added a function for bro developers to change special icons.
Added a function for bro developers to create gibs.
Fixed highfive bubble position for custom bros.

v2.3.2
Added option for bro developers to add custom Harmony Patches.
Added option for bro developers to change special Icon material and spacing.
Fixed custom bros having multiple InvulnerabilityFlash and WavyGrassEffector components.
Load custom bro name from Json rather than using the filename.
Fixed path not set when an ability or a hero is loaded through the mod file.

v2.3.1
Fixed mod options not displaying when 0 bros installed.
Added parameters for changing special icon offset and spacing.