@@ -25,9 +25,14 @@ namespace BroMakerLib.CustomObjects.Projectiles
         public SpriteSM sprite = null;
 
         /// <summary>
+        /// Stores all custom projectile prefabs that have been created to avoid having to recreate them.
+        /// </summary>
+        public static Dictionary<Type, CustomProjectile> CustomProjectilePrefabs = new Dictionary<Type, CustomProjectile>();
+
+        /// <summary>
         /// Folder that contains your sprite image file. 
         /// Defaults to "projectiles". 
-        /// Set this to "" if your projectiles are in the same folder as your .dll
+        /// Set this to "" if your sprite is in the same folder as your .dll
         /// </summary>
         public string spriteFolder = "projectiles";
 
@@ -38,16 +43,29 @@ namespace BroMakerLib.CustomObjects.Projectiles
         public string spriteFileName = string.Empty;
 
         /// <summary>
-        /// Automatically gets set to the path to the folder your projectile's assembly is in.
-        /// Don't set this manually.
-        /// </summary>
-        public string spriteAssemblyPath = string.Empty;
-
-        /// <summary>
         /// Automatically gets set to the path to the folder your sprite is in.
         /// Don't set this manually.
         /// </summary>
         public string spriteDirectoryPath = string.Empty;
+
+        /// <summary>
+        /// Automatically gets set to the path to the folder your projectile's assembly is in.
+        /// Don't set this manually.
+        /// </summary>
+        public string assemblyPath = string.Empty;
+
+        /// <summary>
+        /// Folder that contains your projectile's sounds.
+        /// Defaults to "sounds". 
+        /// Set this to "" if your sounds are in the same folder as your .dll
+        /// </summary>
+        public string soundFolder = "sounds";
+
+        /// <summary>
+        /// Automatically gets set to the path to the folder your projectile's sounds are in.
+        /// Assumes they're in a folder called sounds
+        /// </summary>
+        public string soundPath = string.Empty;
 
         /// <summary>
         /// Size of one frame of your projectile. 
@@ -97,8 +115,9 @@ namespace BroMakerLib.CustomObjects.Projectiles
                 // Only load sprite if we're creating a prefab and it hasn't been created yet.
                 if ( this.sprite == null && this.spriteAutoLoad )
                 {
-                    this.spriteAssemblyPath = Path.GetDirectoryName( Assembly.GetCallingAssembly().Location );
-                    this.spriteDirectoryPath = Path.Combine( spriteAssemblyPath, spriteFolder );
+                    this.assemblyPath = Path.GetDirectoryName( Assembly.GetCallingAssembly().Location );
+                    this.spriteDirectoryPath = Path.Combine( assemblyPath, spriteFolder );
+                    this.soundPath = Path.Combine( assemblyPath, soundFolder );
 
                     if ( spriteFileName == string.Empty )
                     {
@@ -156,9 +175,18 @@ namespace BroMakerLib.CustomObjects.Projectiles
         /// <returns>The prefab of your custom projectile.</returns>
         public static T CreatePrefab<T>() where T : CustomProjectile
         {
-            T prefab = new GameObject( typeof( T ).Name, new Type[] { typeof( Transform ), typeof( MeshFilter ), typeof( MeshRenderer ), typeof( SpriteSM ), typeof( T ) } ).GetComponent<T>();
-            prefab.enabled = false;
-            return prefab;
+            if ( CustomProjectilePrefabs.TryGetValue(typeof(T), out CustomProjectile customProjectile ) )
+            {
+                return customProjectile as T;
+            }
+            else
+            {
+                T prefab = new GameObject( typeof( T ).Name, new Type[] { typeof( Transform ), typeof( MeshFilter ), typeof( MeshRenderer ), typeof( SpriteSM ), typeof( T ) } ).GetComponent<T>();
+                prefab.enabled = false;
+                UnityEngine.Object.DontDestroyOnLoad( prefab.gameObject );
+                CustomProjectilePrefabs.Add( typeof( T ), prefab );
+                return prefab;
+            }
         }
 
         /// <summary>
